--- a/style.css
+++ b/style.css
@@ -85,18 +85,14 @@ video {
     border-radius: 10px;
     box-shadow: 0 0 15px #000;
 }
-/* شاشات الكمبيوتر */
-@media (min-width: 1025px) {
-  .menu {
-    display: flex;
-    justify-content: space-between;
-  }
+/* Media Queries للهاتف */
+@media (max-width: 768px) {
+    .menu {
+        display: block;
+        text-align: center;
+    }
+    .menu a {
+        display: block;
+        margin: 10px 0;
+    }
 }
-
-/* شاشات الهاتف */
-@media (max-width: 1024px) {
-  .menu {
-    display: block;
-  }
-}
-
