--- a/style.css
+++ b/style.css
@@ -123,7 +123,30 @@ video:hover{transform:scale(1.02);box-shadow:0 0 15px #66ccff;}
 #sendBtn:hover{background:#66ccff;color:#000;}
 
 /* الفوتر */
-footer{text-align:center;padding:10px;font-size:12px;color:#66ccff;}
+html, body {
+    height: 100%;
+    max-height: 100%;
+    overflow-x: hidden;
+}
 
-
-
+footer {
+    position: relative;
+    width: 100%;
+    height: auto !important;
+    min-height: 20px;
+    padding: 10px 0;
+    margin: 0;
+}
+@media(max-width: 768px){
+    [class*="fixed"], 
+    .stars, .cloud, .snowflake, .santa, #yearLine, #yearNumber {
+        pointer-events:none;
+        max-height: 100vh;
+        overflow: hidden;
+    }
+}
+/* منع العناصر الثابتة إنها تعمل تمدد للصفحة */
+.stars, .celestial, .cloud, .snowflake, .santa, #yearLine, #yearNumber {
+    max-height: 100vh !important;
+    overflow: hidden !important;
+}
